--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <title>Morgan's Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<h1>Morgan Bierbrunner</h1>
+<p>These are my career goals!</p>
+<img src="IMG_0086.JPG" alt="Morgan Bierbrunner" width="300">
+<a href="https://www.linkedin.com/in/morgan-bierbrunner-0b1a4b1a3/">Checkout out my LinkedIn!</a>
+
+</body>
+
+</html>
